--- a/CppPrimitiveRenderer/CppPrimitiveRenderer/CppPrimitiveRenderer.vcxproj
+++ b/CppPrimitiveRenderer/CppPrimitiveRenderer/CppPrimitiveRenderer.vcxproj
@@ -161,6 +161,7 @@
   <ItemGroup>
     <ClCompile Include="src\Logger.cpp" />
     <ClCompile Include="src\rendering\Batch.cpp" />
+    <ClCompile Include="src\rendering\BatchUtil.cpp" />
     <ClCompile Include="src\rendering\Batch_POINT_SPHERES.cpp" />
     <ClCompile Include="src\rendering\Camera.cpp" />
     <ClCompile Include="src\rendering\Renderer.cpp" />
@@ -172,6 +173,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\rendering\Batch.h" />
+    <ClInclude Include="src\rendering\BatchUtil.h" />
     <ClInclude Include="src\rendering\Batch_POINT_SPHERES.h" />
     <ClInclude Include="src\rendering\Camera.h" />
     <ClInclude Include="src\rendering\PointSphere.h" />
